# PDFTranslator

./: .replit  README.md  app.py  pyproject.toml  replit.nix  requirements.txt
static/css/: style.css
static/js/: main.js
templates/: index.html
